# translucent-keys

./: .clang-format  CMakeLists.txt  README.md
dependencies/: README.md  kqlog  kqnet
include/: main.h
include/client/: client.h  clientUI.h
include/common/: common.h  imgui_init.h
include/keyboardManager/: keyboardManager.h  keyboardUI.h
include/keylogger/: client_keylogger.h  keylogger.h  keylogger_antidebugg.h
include/nameTaker/: nameTaker.h
include/server/: server.h
src/: main.cpp
src/client/: client.cpp  clientUI.cpp  main.cpp
src/common/: imgui_init.cpp
src/keyboardManager/: keyboardManager.cpp  keyboardUI.cpp
src/keylogger/: client_keylogger.cpp  keylogger.cpp  keylogger_antidebugg.cpp  main.cpp
src/nameTaker/: nameTaker.cpp
src/server/: main.cpp  server.cpp
